<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MissionCompleting</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="AddBtn">Add</string>
    <string name="StartTime">StartTime :</string>
    <string name="LastTime">LastTime :</string>
    <string name="Delay">DELAY</string>
    <string name="Score">Score :</string>
    <string name="default_startTime">00:00</string>
    <string name="default_lastTime">0000mins</string>
    <string name="AddDetails">AddDetails</string>
    <string name="AddMissionHint">Input your Mission Here</string>
    <string name="SettingStartTime">Setting your start time</string>
    <string name="Ring">Ring(Y/N)</string>
    <string name="Mins">Mins</string>
    <string name="Thirty">30</string>
    <string name="choosecolortv">Please Choose Your Mission Color</string>
    <string name="showAlarm">Alarm</string>
    <string name="StopAlarm">StopAlarm</string>
    <string name="Three">3</string>
    <color name="white">#FFFFFF</color>
    <string name="EditDetails">EditDetails</string>
    <color name="red">#CC0000</color>
    <color name="blue">#3366CC</color>


</resources>
