<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <ImageView 
        android:id = "@+id/itemcolore"
        android:layout_width = "20dip"
        android:layout_height = "100dip"
        android:contentDescription="@string/app_name"
        />
    <LinearLayout 
         android:layout_width = "300dip"
         android:layout_height = "wrap_content"
         android:layout_gravity="center"
         android:orientation = "vertical"
         android:background="@color/red"
         >
         
        <TextView
            android:id = "@+id/missiondecriptione"
            android:layout_width="match_parent"
            android:layout_height = "wrap_content"
            android:textSize="20sp"
            />
        <LinearLayout 
            android:layout_width="match_parent"
   	 		android:layout_height="match_parent"
    		android:orientation="horizontal">
            
            <TextView
                 android:layout_width = "wrap_content" 
            	 android:layout_height = "wrap_content"
            	 android:text="@string/StartTime"
                />
            <TextView
                 android:id="@+id/starttimetvliste"
                 android:layout_width = "wrap_content" 
            	 android:layout_height = "wrap_content"
            	 android:text="@string/default_startTime"
                />           
            
            <TextView 
                 android:layout_width = "wrap_content" 
            	 android:layout_height = "wrap_content"
            	 android:text="@string/LastTime"
                />
            <TextView
                 android:id="@+id/lasttimetvliste"
                 android:layout_width = "wrap_content" 
            	 android:layout_height = "wrap_content"
            	 android:text="@string/default_lastTime"
                />       
        </LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal"
	    >
        
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text ="@string/Score"   />
        <TextView 
            android:id="@+id/scoretvliste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />     
    </LinearLayout> 
    </LinearLayout> 
    
   
        <CheckBox
        android:id="@+id/mddelete_CB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"  
        />
        
    
    
    

</LinearLayout>
