<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dip"
    android:layout_marginTop="20dip"
    android:layout_marginRight="20dip"
    android:layout_marginBottom="20dip"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/addMissionet"
        android:background="@drawable/rounded_edittext"
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:ems="10"
        android:hint="@string/AddMissionHint"
        android:gravity="top"
        android:padding="10dip"
         />
    <View
        android:layout_height="20dip"
        android:layout_width="wrap_content"
        />
    <TextView
        android:textSize="20sp"
        android:layout_width = "wrap_content"
        android:layout_height ="wrap_content"
        android:text="@string/SettingStartTime"
        />

    <Spinner
        android:id="@+id/Settimespinner"
        android:layout_width="56dip"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <TextView
        android:textSize="20sp"
        android:layout_width = "wrap_content"
        android:layout_height ="wrap_content"
        android:text="@string/Ring"
        />
        <CheckBox
        android:id="@+id/clockRing"
        android:layout_width = "wrap_content"
        android:layout_height ="wrap_content"
        android:checked="false"
        />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <TextView
        android:textSize="20sp"
        android:layout_width = "wrap_content"
        android:layout_height ="wrap_content"
        android:text="@string/LastTime"
        />
        <EditText
        android:id="@+id/lasttimeEt"
        android:layout_width = "wrap_content"
        android:layout_height ="wrap_content"
		android:hint="@string/Thirty"
        />
        <TextView
        android:textSize="20sp"
        android:layout_width = "wrap_content"
        android:layout_height ="wrap_content"
        android:text="@string/Mins"
        />
        
    </LinearLayout>
	
    <TextView
        android:layout_marginTop="35dip"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosecolortv"
        />
        
        <RadioGroup 
            android:layout_marginTop="15dip"
            android:id="@+id/choosecolorRg"
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <RadioButton 
                android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:background="@drawable/red"
            />
            <RadioButton 
                android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow"
            />
            <RadioButton 
                android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:background="@drawable/green"/>
            <RadioButton 
                android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:background="@drawable/pinkblue"/>
            
        </RadioGroup>
        
       
         
    

</LinearLayout>