<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <ImageView 
        android:id = "@+id/itemcolor"
        android:layout_width = "match_parent"
        android:layout_height = "100dip"
        android:layout_weight= "20"
        android:contentDescription="@string/app_name"
        />
    <LinearLayout 
         android:layout_width = "match_parent"
         android:layout_height = "wrap_content"
         android:layout_weight = "1"
         android:orientation = "vertical">
         
        <TextView
            android:id = "@+id/missiondecription"
            android:layout_width="match_parent"
            android:layout_height = "wrap_content"
            android:textSize="20sp"
            />
        <LinearLayout 
            android:layout_width="match_parent"
   	 		android:layout_height="match_parent"
    		android:orientation="horizontal">
            
            <TextView
                 android:layout_width = "wrap_content" 
            	 android:layout_height = "wrap_content"
            	 android:text="@string/StartTime"
                />
            <TextView
                 android:id="@+id/starttime"
                 android:layout_width = "wrap_content" 
            	 android:layout_height = "wrap_content"
                />
            
            
            <TextView 
                 android:layout_width = "wrap_content" 
            	 android:layout_height = "wrap_content"
            	 android:text="@string/LastTime"
                />
            <TextView
                 android:id="@+id/lasttime"
                 android:layout_width = "wrap_content" 
            	 android:layout_height = "wrap_content"
                />       
        </LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal"
	    >
        <Button
            android:id="@+id/delayBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dip"
            android:text="@string/Delay" />
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text ="@string/Score"   />
        <TextView 
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />     
    </LinearLayout> 
    </LinearLayout>    
	
</LinearLayout>
